  * pg_createcluster: Check validity of locale before calling initdb under it.
  * pg_wrapper: Support PGCLUSTER environment variable. Closes: #305912
  * pg_upgradecluster:
    - Copy original configuration files.
    - Configure the target cluster to use the original port, move the old
      cluster to a previously unused port.
    - Start the new cluster after upgrade.

 -- Martin Pitt <mpitt@debian.org>  Sun, 22 May 2005 15:03:54 +0200

postgresql-common (8) experimental; urgency=low

  * pg_ctlcluster: Check whether owner is in the shadow group, and keep shadow
    group privilege in this case; this is a poor workaround for Perl's lack of
    an initgroups() functions. Closes: #305427
  * debian/postgresql-common.postinst: Fix adduser invocation, set home
    directory to /var/lib/postgresql. Closes: #308589
  * Remove pg_default.1 and pg_exec.1, these programs do not exist.  Closes:
    #305724
  * debian/postgresql-common.links: Add a symlink postgresql-common(7) to
    pg_wrapper(1) to make finding the manpage a bit more obvious.
  * PgCommon.pm, user_cluster_map(): If there are no clusters, use the latest
    version; this makes it possible to use remote clusters with no local ones.
    Closes: #306836

 -- Martin Pitt <mpitt@debian.org>  Fri, 13 May 2005 00:35:35 +0200

postgresql-common (7) experimental; urgency=low

  * Fix warning when calling pg_wrapper with an invalid cluster.
  * PgCommon.pm, user_cluster_map(): If only one cluster exists, return that
    if no match is found in the map files.
  * pg_ctlcluster: Start the postmaster under the locale that was used with
    initdb.
  * Updated documentation in architecture.html.

 -- Martin Pitt <mpitt@debian.org>  Wed, 20 Apr 2005 02:34:19 +0200

postgresql-common (6) experimental; urgency=low

  * pg_dropcluster: Check if postmaster and autovacuum log file paths are
    defined before unlinking them to avoid a warning. Closes: #303259
  * pg_ctlcluster: Documented the autovacuum stuff in the POD.